{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 52,
  "lineage": "eb0e73dc-0aa4-4080-3074-0fa1160444ca",
  "resources": [
    {
      "module": "module.consul",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:222691220303:vpc/vpc-4128b43b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-2adbb246",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-bbb38ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-4128b43b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-aab1aad5",
            "owner_id": "222691220303",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lc_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:222691220303:security-group/sg-071d01d882d9d3d10",
            "description": "Security group for the consul-example-client launch configuration",
            "egress": [],
            "id": "sg-071d01d882d9d3d10",
            "ingress": [],
            "name": "consul-example-client20200127134942318600000003",
            "name_prefix": "consul-example-client",
            "owner_id": "222691220303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "consul-example-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-4128b43b"
          }
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lc_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:222691220303:security-group/sg-017dad25d87b455d3",
            "description": "Security group for the consul-example-server launch configuration",
            "egress": [],
            "id": "sg-017dad25d87b455d3",
            "ingress": [],
            "name": "consul-example-server20200127134942318700000004",
            "name_prefix": "consul-example-server",
            "owner_id": "222691220303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "consul-example-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-4128b43b"
          }
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1321590375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1765337341",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8400,
            "id": "sgrule-2256173366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8400,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8400,
            "id": "sgrule-3278862935",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8400,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8400,
            "id": "sgrule-3416495665",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8400,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_cli_rpc_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8400,
            "id": "sgrule-2517189703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8400,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8600,
            "id": "sgrule-2399134715",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8600,
            "id": "sgrule-3421167770",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8600,
            "id": "sgrule-2246346306",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8600,
            "id": "sgrule-3629012020",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8600,
            "id": "sgrule-4029677923",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8600,
            "id": "sgrule-3039101442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8600,
            "id": "sgrule-565913005",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_dns_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8600,
            "id": "sgrule-2081552347",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8500,
            "id": "sgrule-1870673776",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8500,
            "id": "sgrule-714421265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-20487464",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_api_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-1553092446",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8301,
            "id": "sgrule-2485920804",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8301,
            "id": "sgrule-3510183749",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-2929125769",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-4080811007",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8301,
            "id": "sgrule-3940796092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8301,
            "id": "sgrule-2952185309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-180963942",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules.module.client_security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_lan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-1466144784",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8301,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8302,
            "id": "sgrule-1765467744",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8302,
            "id": "sgrule-741336321",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8302,
            "id": "sgrule-692004309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_tcp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8302,
            "id": "sgrule-1955985315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8302,
            "id": "sgrule-401933560",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8302,
            "id": "sgrule-1390413721",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8302,
            "id": "sgrule-2371913274",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_serf_wan_udp_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8302,
            "id": "sgrule-3502920780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8300,
            "id": "sgrule-1980667943",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8300,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8300,
            "id": "sgrule-857447238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8300,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_servers.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8300,
            "id": "sgrule-3555831229",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8300,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients.module.security_group_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_rpc_inbound_from_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8300,
            "id": "sgrule-2388361163",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": true,
            "source_security_group_id": null,
            "to_port": 8300,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3397230875",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071d01d882d9d3d10",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_clients.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_servers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1701011609",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-017dad25d87b455d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.consul.module.consul_servers.aws_security_group.lc_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.consul.module.consul_clients",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.consul.module.consul_servers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_from_security_group_ids",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    }
  ]
}